--- a/css/main.css
+++ b/css/main.css
@@ -8,28 +8,45 @@ ul {
 }
 
 header {
+	font-family: 'Titillium Web', sans-serif;
 	background: #e3e3e3;
 }
 
 #gallery {
-	background: #a5a5a5;
+	font-family: 'Titillium Web', sans-serif;
+	margin: 0px auto;
+	padding: 30px;
+	background: #ffe84a;
 }
 
 #fun_facts {
-	background: #b7b7b7;
+	margin: 0px auto;
+	padding: 30px;
+	color: #fff;
+	font-family: 'Titillium Web', sans-serif;
+	background: #19702f;
+}
+
+#fun_facts ol {
+	-moz-column-count: 2;
+	-moz-column-gap: 10px;
 }
 
 footer {
+	float: right;
+	font-family: 'Titillium Web', sans-serif;
 	margin 0px;
-	background: #a9a9a9;
+	background: #fff;
 }
 	
 h1 {
+	font-family: 'Titillium Web', sans-serif;
 	margin: 0;
 	padding: 30px 20px 0;
 }
 
 h2 {
+	font-family: 'Titillium Web', sans-serif;
 	margin: 0;
 		padding: 30px 20px 0;
 }
@@ -70,17 +87,46 @@ p {
 	} 
  
 #navbar ul li a:hover {
-	height: 75px;
+	height: 100%;
 	color: #000;
 	background-color: #FFF;
 	} 
 #neymar_logo {
-	height: 63px;
+	height: 100%;
 	width: 240px;
 	float: left;
 	background-repeat: no-repeat;
 	margin-left: 50px;
 	margin-top: 3px;
+}
+
+#neymar_info {
+	height: 200px;
+	width: 380px;
+	float: right;
+	color: #FFF;
+	text-align: left;
+	padding-top: 150px;
+	padding-right: 60px;
+	padding-bottom: 0px;
+	padding-left: 0px;
+}
+
+#neymar_banner {
+	background-image: url(../images/banner.jpg);
+	background-repeat: no-repeat;
+	height: 600px;
+	width: 960px;
+	margin-top: -5px;
+	z-index: -1000;
+}
+
+#button {
+	height: 25px;
+	width: 350px;
+	float: right;
+	padding: 5px;
+	margin: 0px;
 }
 
 /*Gallery*/
@@ -98,6 +144,15 @@ p {
 	float: left;
 	margin-left: 5px;
 }
+
+aside form {
+	padding-left: 370px;
+}
+
+a:link {color:#000;}      
+a:visited {color:#000;}  
+a:hover {color:#fff;}  
+a:active {color:#000;} 
 
 
 	
